# rapidkit-core

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  kits_manifest.json  pyproject.toml  pyrightconfig.json  pytest.ini  rapidkit_cli.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: bootstrap-python.yml  community-staging-ci.yml  community-staging-docker.yml  community-staging-promote-ff.yml  community-staging-promote-to-core-pr.yml  community-staging-publish.yml  community-staging-tag-stable.yml  community-staging-tag.yml  core-publish.yml  core-tag-stable.yml  docker-build.yml  python-publish.yml  python-release.yml
assets/: logo.txt
docs/: README.md
docs/Github/: README.md  announcement-discord.md  announcement-linkedin.md  announcement-slack.md  announcement-x.md  contributor-onboarding-post.md  release-github.md
docs/api-reference/: README.md
docs/community/: README.template.md
docs/configuration/: CONFIG_FILES.md
docs/contracts/: README.md
docs/contributing/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  github-templates.md
docs/deployment/: CI-CD-SIMPLIFICATION.md  PACKAGE_DISTRIBUTION_GUIDE.md
docs/developer-guide/: README.md  github-actions-overview.md  override-contracts.md
docs/getting-started/: README.md  TUI_QUICKSTART_EN.md
docs/licensing/: OVERVIEW.md  SECURITY_MODULE_LICENSING.md
docs/modules/: compatibility_matrix.md  kit_consumer_guide.md  overview.md
docs/modules/architecture/: README.md  api.md  changelog.md  migration.md  modules-system.md  snippet-architecture.md  troubleshooting.md
docs/project/: INDEX.md  README-root.md  rapidkit-github-actions-template.yml  rapidkit-pre-commit-template.yml  templates-README.md
docs/project/readme-templates/: core.md
docs/readme-templates/: community.md
docs/testing/: README.md
docs/user-guide/: README.md
licenses/kits/: fastapi.ddd.json  fastapi.standard.json  nestjs.standard.json
scripts/: audit_module_parity.py  check_actions_flag.py  check_commit_message.py  check_module_coverage.py  check_module_integrity.py  compute_agg_version.py  create_module.py  enforce-commit-message.sh  generate_modules_lock.py  generate_release_notes.py  get_shared_workflows.py  git-commit-safe.sh  git-commit-wrapper.sh  manage_community_docs.py  pre_commit_manager.py  run_distribution_tests.py  run_poetry_with_python.sh  setup-commit-validation.sh  setup-dev-environment.sh  setup-dev.sh  typecheck.sh  update.sh  update_modules_lock.sh
scripts/ci/: bootstrap.sh
src/: __init__.py  sync_probe.py
src/cli/: global_cli.py  main.py
src/cli/commands/: create.py  doctor.py  frameworks.py  info.py  init.py  list.py  modules.py  (+1 more)
src/core/: distribution.json
src/experimental/: __init__.py
src/modules/: STRUCTURE.yaml
src/runtime/: __init__.py
tests/: __init__.py  conftest.py  test_sync_probe.py
tests/cli/: test_add_command.py  test_cli_coverage.py  test_cli_lifecycle.py  test_cli_main.py  test_compat.py  test_compat_unit.py  test_create_project_interactive.py  test_frameworks_cli.py  test_global_cli.py
tests/core/: test_core_extra.py  test_core_services.py  test_core_services_comprehensive.py  test_core_services_comprehensive_end_user.py  test_core_services_coverage.py  test_env_validator.py  test_kit_utils.py  test_logging_fallback_unit.py  test_logging_init.py  test_logging_module_unit.py  test_merge_strategies.py  test_profile_utils_unit.py  test_root_packages.py  test_structure_builder_unit.py  test_validators_unit.py  test_vendor_store_unit.py
tests/fixtures/: __init__.py
tests/integration/: test_basic.py  test_compat.py  test_end_user.py  test_end_user_scenarios.py  test_framework_integration_end_user.py  test_functional_coverage.py  test_hooks_frameworks_coverage.py  test_insights_full.py  test_integration_workflows.py  test_new_features.py  test_postgres_integration.py  test_quick_coverage.py  test_release_and_rollback_extras.py  test_simple.py
tests/kits/: test_create_fastapi_enterprise.py  test_fastapi_ddd_hooks.py  test_fastapi_hooks.py  test_generator.py  test_nestjs_generators.py  test_nestjs_hooks.py  test_shared_variable_schema.py
tests/modules/: test_module_consistency.py  test_module_installation_e2e.py  test_module_structure_contract.py
tests/scripts/: test_check_module_integrity.py
tests/services/: test_dependency_installer.py  test_dependency_installer_align.py  test_dependency_installer_sync.py  test_install_module_dependencies.py  test_override_contracts_decorators.py  test_poetry_dependency_normalizer.py  test_project_creator_defaults.py  test_snippet_and_dependency_highimpact.py  test_snippet_ast_py.py  test_snippet_ast_py_anchor.py  test_snippet_conflicts.py  test_snippet_default_patch_mode.py  test_snippet_injector.py  test_snippet_injector_injection.py  test_snippet_injector_more.py  test_snippet_merge_and_validate.py  test_snippet_no_touch.py  test_snippet_optimizer_and_summary.py  test_snippet_reconcile_pending.py  test_snippet_rollback.py  test_telemetry.py
tests/telemetry/: test_telemetry_collector_comprehensive.py  test_telemetry_comprehensive.py  test_telemetry_coverage.py  test_telemetry_dir_resolution.py  test_telemetry_insights_comprehensive.py  test_telemetry_metrics_comprehensive.py
tests/utils/: module_inventory.py  test_extras_copier.py  test_import_organizer.py  test_import_organizer_comprehensive.py  test_profile_utils.py  test_translation_utils.py  test_utilities_comprehensive_end_user.py
(+571 files in other folders)
