[project]
name = "rapidkit-core"
version = "0.3.8"
description = "Community-built rapid automation toolkit for makers who ship with heart"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
authors = [
    { name = "Baziar", email = "baziar@live.com" },
]
keywords = ["scaffolding", "boilerplate", "fastapi", "codegen", "devtools"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.19,<0.20",
    "click>=8.3,<8.4",
    "rich>=14.2.0,<15.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "tabulate>=0.9.0,<0.10.0",
    "jsonschema>=4.25.1,<5.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11,<3.0",
    "pynacl>=1.6.2,<2.0.0",
    "cryptography>=46.0.2,<47.0.0",
    "types-requests>=2.32.4,<3.0.0",
    "requests>=2.32.5,<3.0.0",
    "email-validator>=2.1,<3.0",
    "pygithub>=2.7.0,<3.0.0",
    "packaging>=25.0.0,<26.0.0",
    "black>=25.9.0,<26.0.0",
    "libcst>=1.6.0,<2.0.0",
    "yamllint>=1.37.1,<2.0.0",
    "fastapi>=0.119.0,<1.0.0",
    "starlette>=0.49.1,<0.50",
    "uvicorn[standard]>=0.37.0",
    "poetry-plugin-export>=1.10.0,<2.0.0",
    "mdformat>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.23.8,<0.24.0",
    "black>=25.9.0,<26.0.0",
    "ruff>=0.14.0,<0.15.0",
    "mypy>=1.18.2,<2.0.0",
    "types-PyYAML>=6.0.12,<7.0.0",
    "pip-audit>=2.9.0,<3.0.0",
    "bandit>=1.8.6,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    "types-requests>=2.32.4,<3.0.0",
    "cryptography>=46.0.2,<47.0.0",
    "httpx>=0.28.0,<0.29.0",
    "pip>=26",
    "tox>=4.23.0,<5.0.0",
    "types-psutil>=7.0.0,<8.0.0",
]

[project.scripts]
rapidkit = "cli.global_cli:main"

[project.urls]
Homepage = "https://www.getrapidkit.com/"
Repository = "https://github.com/getrapidkit/rapidkit-core"
Documentation = "https://www.getrapidkit.com/docs"

[tool.poetry]
name = "rapidkit-core"
version = "0.3.8"
description = "Community-built rapid automation toolkit for makers who ship with heart"
authors = ["Baziar <baziar@live.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "core", from = "src" },
    { include = "cli", from = "src" },
    { include = "kits", from = "src" },
    { include = "modules", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
black = "^25.9.0"
click = ">=8.3,<8.4"
cryptography = "^46.0.2"
email-validator = ">=2.1,<3.0"
fastapi = ">=0.119.0,<1.0.0"
jinja2 = "^3.1.6"
jsonschema = "^4.25.1"
libcst = ">=1.6.0,<2.0.0"
mdformat = "^1.0.0"
packaging = "^25.0"
poetry-plugin-export = "^1.10.0"
pydantic = ">=2.12.2"
pydantic-settings = ">=2.11,<3.0"
pygithub = "^2.7.0"
pynacl = "^1.6.2"
pyyaml = "^6.0.3"
requests = "^2.32.5"
rich = "^14.2.0"
starlette = ">=0.49.1,<0.50"
tabulate = "^0.9.0"
typer = ">=0.19,<0.20"
types-requests = "^2.32.4.20250913"
uvicorn = { version = ">=0.37.0", extras = ["standard"] }
yamllint = "^1.37.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.6"
black = "^25.9.0"
cryptography = "^46.0.2"
httpx = "^0.28.0"
mypy = "^1.18.2"
pip = ">=26"
pip-audit = "^2.9.0"
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^7.0.0"
ruff = "^0.14.0"
tox = "^4.23.0"
types-PyYAML = "^6.0.12.20250915"
types-psutil = "^7.0.0.20251116"
types-requests = "^2.32.4.20250913"

[tool.coverage.run]
branch = false
source = [
    "src",
]
omit = [
    "src/core/quantum_engine.py",
    "src/experimental/*",
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "*/.env/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 60.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.repositories]
core = 70.0
community = 60.0

[tool.coverage.required_full_coverage]
files = [
    "src/core/exceptions.py",
    "src/core/__init__.py",
    "src/cli/__init__.py",
    "src/cli/commands/__init__.py",
]

[tool.coverage.excluded_files]
patterns = [
    "*/templates/*",
    "*/migrations/*",
    "*_pb2.py",
    "*/experimental/*",
]
[tool.mypy]
python_version = "3.10"
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true
pretty = true
packages = ["core", "cli", "kits", "modules"]
explicit_package_bases = true
namespace_packages = true
follow_imports = "normal"
exclude = [
    "tests/",
    "user-tests/",
    "src/experimental/",
]

[[tool.mypy.overrides]]
module = [
    "cli.ui.printer",
    "core.kit_utils",
    "core.services.snippet_injector",
    "cli.commands.add.module",
    "core.tui",
    "requests.*",
    "jsonschema.*",
    "yaml.*",
    "pydantic_settings.*",
    "sqlalchemy.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "psutil",
    "psutil.*",
    "nacl",
    "nacl.*"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
